--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             </intent-filter>
         </activity>
         <service android:name=".SolfitBluetoothService" android:enabled="true" android:exported="true"/>
-        <service android:name="aicare.net.cn.iweightlibrary.wby.WBYService"/>
+        <service android:name="aicare.net.cn.iweightlibrary.wby.WBYService" android:enabled="true"/>
     </application>
 
 </manifest>
