--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,13 @@ plugins {
 }
 
 android {
-    compileSdk 29
+    compileSdk 30
 
     defaultConfig {
         configurations.all { resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' } }
         applicationId "net.huray.solfit.bluetooth"
         minSdk 18
-        targetSdk 29
+        targetSdk 30
         versionCode 1
         versionName "1.0"
 
@@ -43,4 +43,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'gun0912.ted:tedpermission:2.2.3'
+    // Preferences Data Store
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation "androidx.datastore:datastore-core:1.0.0"
 }
