--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     defaultConfig {
         configurations.all { resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' } }
         applicationId "net.huray.solfit.bluetooth"
-        minSdk 18
+        minSdk 21
         targetSdk 30
         versionCode 1
         versionName "1.0"
@@ -39,6 +39,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.security:security-crypto:1.1.0-alpha03'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
