--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,17 +20,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Solfit_bluetooth_android">
-        <activity
-            android:name=".UserActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        android:supportsRtl="true">
         <service android:name=".SolfitBluetoothService" android:enabled="true" android:exported="true"/>
         <service android:name="aicare.net.cn.iweightlibrary.wby.WBYService" android:enabled="true"/>
     </application>
