[CHORE] AndroidManifest 수정

--- a/build.gradle
+++ b/build.gradle
@@ -18,3 +18,10 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
+}
