--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,6 @@ android {
 }
 
 dependencies {
-    // solfit
-    implementation 'com.github.elinkthings:BodyFatScaleSDKRepositoryAndroid:1.3.2'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -41,4 +39,8 @@ dependencies {
     implementation 'androidx.security:security-crypto:1.1.0-alpha03'
     implementation 'gun0912.ted:tedpermission:2.2.3'
     implementation 'com.google.code.gson:gson:2.8.9'
+    implementation files('libs/AicareUtils.jar')
+    implementation files('libs/AlgorithmUtil.jar')
+    implementation files('libs/getmorefatdata.jar')
+    implementation files('libs/iWeightLibrary.jar')
 }
