--- a/libsolfit/build.gradle
+++ b/libsolfit/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 30
+    compileSdk 31
 
     defaultConfig {
         configurations.all { resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' } }
         minSdk 21
-        targetSdk 30
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -29,18 +29,19 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', includes: ['*.jar'])
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    //implementation 'androidx.appcompat:appcompat:1.4.1'
+//    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.security:security-crypto:1.1.0-alpha03'
     implementation 'gun0912.ted:tedpermission:2.2.3'
     implementation 'com.google.code.gson:gson:2.8.9'
-    implementation files('libs/AicareUtils.jar')
-    implementation files('libs/AlgorithmUtil.jar')
-    implementation files('libs/getmorefatdata.jar')
-    implementation files('libs/iWeightLibrary.jar')
 }
